# bidspm

./: .gitignore  Dockerfile.matlab-ultra  Dockerfile.octave-enhanced  Dockerfile.octave-optimized  Dockerfile.simple-performance  Dockerfile.spm-standalone  HPC_DEPLOYMENT.md  README.md  activate_bidspm.sh  atlas_emergency_debug.sh  benchmark_performance.sh  bidspm.py  build_bidspm_apptainer.sh  build_matlab_ultra_container.sh  build_octave_optimized.sh  build_performance_container.sh  build_spm_standalone_container.sh  check_server_containers.sh  complete_automation.sh  config.json  config_schema.json  container.json  container_apptainer.json  container_apptainer_atlas_fix.json  container_apptainer_example.json  container_docker_server.json  container_matlab_ultra.json  container_production.json  container_server_local.json  corrected_real_analysis.sh  debug_atlas_error.sh  debug_test.sh  dev_version_atlas_fix.sh  dockerfile.performance  emergency_atlas_workaround.sh  explore_container.sh  fix_atlas_error.sh  json_validator.py  octave_debug.sh  orig_bidspm.py  (+12 more)
bidspm_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dockerfile/: Dockerfile.performance-layer  benchmark_real_performance.sh  build_mri_lab_container.sh  build_performance_layer.sh  container_performance_enhanced.json  dockerfile
test_data/external_models/: model_test.json
